fetch and display currency data

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
     <main>
       <div class="top">
         <p>Crypto</p>
+        <img src="" class="doge-img" />
         <p>Weather</p>
       </div>
       <h1 class="time">TIME HERE</h1>
