add name, icon, and styling of the cryptocurrency

--- a/public/style.css
+++ b/public/style.css
@@ -30,3 +30,16 @@ div.top {
 h1.time {
   text-align: center;
 }
+
+div#crypto {
+  font-size: 1.25rem;
+}
+
+div#crypto-top {
+  display: flex;
+  align-items: center;
+}
+
+div#crypto-top > span {
+  margin-left: 10px;
+}
