--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,9 @@
   <body>
     <main>
       <div class="top">
-        <p>Crypto</p>
-        <img src="" class="doge-img" />
+        <div id="crypto">
+          <div id="crypto-top"></div>
+        </div>
         <p>Weather</p>
       </div>
       <h1 class="time">TIME HERE</h1>
