--- a/views/index.html
+++ b/views/index.html
@@ -5,12 +5,12 @@
   </head>
   <body>
     <main>
-      <div class="top">
+      <header class="container">
         <div id="crypto">
-          <div id="crypto-top"></div>
+          <div id="crypto__top"></div>
         </div>
         <p>Weather</p>
-      </div>
+      </header>
       <h1 class="time">TIME HERE</h1>
       <p class="author"></p>
     </main>
