display weather icon

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,9 @@
         <div id="crypto">
           <div id="crypto__top"></div>
         </div>
-        <p>Weather</p>
+        <div id="weather">
+          <p>Weather</p>
+        </div>
       </header>
       <h1 class="time">TIME HERE</h1>
       <p class="author"></p>
