--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,7 @@ header.container {
 
 h1.time {
   text-align: center;
+  font-size: 5rem;
 }
 
 div#crypto {
@@ -65,10 +66,15 @@ p.weather-city {
   text-align: right;
   margin: 0;
   margin-top: -10px;
+  font-size: 1.2rem;
 }
 
 p.weather-temp {
   margin: 0;
   font-size: 1.7rem;
   margin-left: -10px;
+}
+
+p#author {
+  font-size: 1rem;
 }
